# ciao-method

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.sh  submit_ciao_job.py  test_migration.py
ciao/: __init__.py  __main__.py  typing.py
ciao/components/: __init__.py  classifiers.py  factory.py
ciao/components/explainer/: __init__.py  ciao_explainer.py  feature_selector.py
ciao/components/obfuscation/: __init__.py  base.py
ciao/components/segmentation/: __init__.py  base.py
ciao/data/: __init__.py  data_module.py
ciao/data/datasets/: __init__.py  colorectal.py  prostate.py
configs/: cifar10.yaml  colorectal.yaml  default.yaml
configs/ciao/obfuscation/: blur.yaml  interlacing.yaml  noise.yaml  zero.yaml
configs/ciao/segmentation/: hexagonal.yaml  superpixel.yaml
configs/data/datasets/cifar10/: test.yaml  train.yaml  val.yaml
configs/data/datasets/colorectal_cancer/: test.yaml  train.yaml  val.yaml
configs/data/datasets/prostate_cancer/: test.yaml  train.yaml  val.yaml
configs/data/transforms/: train.yaml
