[project]
name = "ciao-method"
version = "0.1.0"
description = "CIAO: Contextual Importance Assessment via Obfuscation - Enterprise Architecture"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

#####################################
# Dependencies
#####################################

dependencies = [
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "lightning>=2.0.0",
    "torch>=2.4.1",
    "torchvision>=0.15.0",
    "numpy>=2.2.3",
    "scikit-image>=0.19.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
    "Pillow>=11.1.0",
    "tqdm>=4.62.0",
    "networkx>=3.4.2",
    "structlog==24.4.0",
    "python-box==6.1.0",
    "PyYAML==6.0.2",
    "setuptools>=75.8.0",
    "openslide-python==1.4.1",
    "openslide-bin==4.0.0.6",
    "albumentations>=1.3.0",
    "pandas>=2.0.0",
    "rationai-mlkit @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git",
    "rationai-masks @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git",
    "rationai-tiling @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/tiling.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ciao = "ciao.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ciao*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
